--- a/styles/components/carousel-projects.css
+++ b/styles/components/carousel-projects.css
@@ -1,8 +1,6 @@
 .carousel-container {
   position: relative;
   display: flex;
-  align-items: center;
-  justify-content: center;
 
   animation: floatIn linear both;
   animation-timeline: view(); 
@@ -29,6 +27,7 @@
   padding: 3rem;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 20px;
   border-radius: 30px;
   overflow: hidden;
@@ -65,7 +64,7 @@
 
 .project-card p {
   line-height: 1;
-  margin: 0;
+  margin-top: 10px;
 }
 
 .project-buttons {
